--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -52,5 +52,11 @@
                 background: var(--yellow-500);
             }
         }
+
+        
+    }
+
+    > button{
+        margin-left: auto;
     }
 }
